make restick work