@@ -5,15 +5,56 @@ import com.wynntils.models.territories.TerritoryInfo;
 import com.wynntils.models.territories.type.GuildResource;
 import com.wynntils.services.map.pois.TerritoryPoi;
 import com.wynntils.utils.type.CappedValue;
+import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.time.Instant;
+import java.util.*;
 
 public class ResourceTickFeature {
 
+    private static final GuildResource[] RESOURCES = GuildResource.values();
+    private static final int resTickOffset = 5;     // The map updates with a delay of 5 seconds for some reason
     public static boolean enabled = true;
+    private Integer lastMapTick = null;
+    private String lastWorld = null;
+    private Instant lastResTick = null;
+
+    public ResourceTickFeature() {
+        ClientTickEvents.END_CLIENT_TICK.register(client -> {
+            if (!enabled) return;
+
+            Instant currentTime = Instant.now();
+            int currentMapTick = calcMapTick();
+
+            if (lastMapTick == null || lastMapTick.equals(currentMapTick)) {
+                lastMapTick = currentMapTick;
+                return;
+            }
+            lastMapTick = currentMapTick;
+
+            String currentWorld = get_world();
+            if (currentWorld == null || !currentWorld.equals(lastWorld)) {
+                lastWorld = currentWorld;
+                return;
+            }
+
+            lastResTick = currentTime.minusSeconds(currentMapTick + resTickOffset);
+
+            if (client.world != null) {
+                long time = client.world.getTime();
+                System.out.println("Map tick changed to " + currentMapTick + " at world time " + time);
+            }
+        });
+    }
+
+    private static String get_world() {
+        if (!Models.WorldState.onWorld()) {
+            return null;
+        }
+
+        String currentWorldName = Models.WorldState.getCurrentWorldName();
+        return currentWorldName.isEmpty() ? null : currentWorldName;
+    }
 
     private static int get_res_storage_lvl(int res_storage_max) {
         return switch (res_storage_max) {
@@ -41,13 +82,16 @@ public class ResourceTickFeature {
     }
 
     private static int mode(List<Integer> numbers) {
+        if (numbers.isEmpty()) return 0;
+
         Map<Integer, Integer> counts = new HashMap<>();
         for (int n : numbers) {
             counts.put(n, 1 + counts.getOrDefault(n, 0));
         }
 
-        int mostCommon = numbers.get(0);
+        int mostCommon = numbers.getFirst();
         int maxCount = 0;
+
         for (Map.Entry<Integer, Integer> entry : counts.entrySet()) {
             if (entry.getValue() > maxCount) {
                 mostCommon = entry.getKey();
@@ -58,10 +102,7 @@ public class ResourceTickFeature {
         return mostCommon;
     }
 
-    public void init() {
-    }
-
-    public int calcMapTick() {
+    private int calcMapTick() {
         List<TerritoryPoi> TerritoryPois = Models.Territory.getTerritoryPoisFromAdvancement();
         List<Integer> map_ticks = new ArrayList<>();
 
@@ -71,15 +112,17 @@ public class ResourceTickFeature {
             if (territoryInfo.isHeadquarters()) continue;   // Skip if HQ
 
             int emerald_gen = territoryInfo.getGeneration(GuildResource.EMERALDS);
-            if (emerald_gen < 250000) continue;             // 3-3 em prod and city
+            if (emerald_gen < 250000) continue;             // only check if 3-3 em prod and city
 
             boolean has_res_prods = false;
-            for (GuildResource resource : GuildResource.values()) {
+            for (GuildResource resource : RESOURCES) {
                 if (!resource.isMaterialResource()) continue;
-                int resource_gen = territoryInfo.getGeneration(resource);
-                has_res_prods = has_res_prods || resource_gen >= 4800;
+                if (territoryInfo.getGeneration(resource) >= 4800) {
+                    has_res_prods = true;
+                    break;
+                }
             }
-            if (has_res_prods) continue;                    // No res prods
+            if (has_res_prods) continue;                 // No res prods
 
             CappedValue emerald_storage = territoryInfo.getStorage(GuildResource.EMERALDS);
             if (emerald_storage.max() < 6000) continue;     // min 1 emerald storage level
@@ -89,12 +132,20 @@ public class ResourceTickFeature {
 
             int res_storage_cost = get_res_storage_cost(res_storage_lvl);
 
-            float emeralds_max = ((float) (emerald_gen - res_storage_cost)) / 60;
+            float emeralds_max = ((float) (emerald_gen - res_storage_cost)) / 60f;
 
             map_ticks.add(Math.round((emerald_storage.current() / emeralds_max) * 60));
         }
 
         return mode(map_ticks);
+    }
+
+    public int getTimeUntilResTick() {
+        if (lastResTick == null) return -1;
+
+        int secondsSinceResTick = (int) java.time.Duration.between(lastResTick, java.time.Instant.now()).getSeconds();
+
+        return 60 - (secondsSinceResTick % 60);
     }
 }
 
